fixed styles on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -26,7 +26,7 @@ body {overflow:hidden; background: url('../img/header.jpg') no-repeat; backgroun
 h1 {
 	font-family: 'Montez'; 
 	color: #FFF; 
-	font-size: 4em; 
+	font-size: 3.5em; 
 	opacity: .9;
 	text-shadow: 3px 3px 3px rgba(0, 0, 0, .2);
 	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
@@ -40,7 +40,7 @@ h1 {
 h2 {
 	font-family: 'Roboto'; 
 	color:#EEE; 
-	font-size: 1.5em; 
+	font-size: 1.3em; 
 	font-weight: 100; 
 	letter-spacing: 1px;
 	margin-top: 30px;
@@ -59,6 +59,7 @@ strong { color:#FF6E6E;}
 .proyects h2 {
 	text-decoration: underline;
 	text-transform: uppercase;
+	font-size: 1.5em;
 }
 
 .proyects ul {
@@ -76,6 +77,7 @@ strong { color:#FF6E6E;}
 .proyects ul li a {
 	color: #FFF;
 	opacity: .7;
+	font-weight: 100;
 }
 
 .proyects ul li a:hover {
